# ariadne-codegen-serverside

./: LICENSE  Makefile  README.md  pyproject.toml  schema.graphql
mypackage/: resolvers.py  wrong_resolvers.py
